--- a/40_implementation.tex
+++ b/40_implementation.tex
@@ -1,9 +1,12 @@
 \chapter{Implementation}
 
-\section{Considerations} \newpage a 
+PIXXERS Bla Bla Bla
+
+\section{Project Setup} \newpage a 
 Just an example, no Real appPlay Setup, Threadpools, Local Testing, Cloud Deployment
 
-\section{Synchronous Version} \newpage a \newpage a \newpage a 
-Prerequisites, ...
+\section{Development} \newpage a \newpage a \newpage a 
 
-\section{Asynchronous Version} \newpage a \newpage a \newpage a 
+\section{Deployment} \newpage a \newpage a
+
+\section{Maintenance} \newpage a \newpage a
