--- a/30_stateoftheart.tex
+++ b/30_stateoftheart.tex
@@ -138,10 +138,57 @@ In this figure taken from a performance analysis of D. Torstensson and E. Eloff,
 \end{figure}
 
 \subsection{Eventmachine}
-Ruby\footnote{\url{https://www.ruby-lang.org}} is a dynamic programming language that has a high adoption rate due to the popular \textit{Ruby on Rails} MVC framework that powers a lot of modern Websites \cite[p. 11]{Orsini2008}. In contrast to \textit{JavaScript}, \textit{Ruby} does not support event-driven programming by nature.
+Ruby\footnote{\url{https://www.ruby-lang.org}} is a dynamic programming language that has a high adoption rate due to the popular \textit{Ruby on Rails} MVC framework that powers a lot of modern Websites \cite[p. 11]{Orsini2008}. However, unlike \textit{JavaScript}, \textit{Ruby} was not conceived with non-blocking event-driven behaviour in mind. \textit{Eventmachine} is a library that aims to facilitate the process of developing non-blocking Web server applications in \textit{Ruby}.
 
+\subsubsection*{Development}
+As mentioned in section \ref{lab:nodehttp}, \textit{JavaScript} uses anonymous and first-order functions to manage asynchronous program flow. Due to \textit{Ruby's} object-oriented nature, these concepts are not supported at language-level; instead, it supports so-called \textit{blocks} that in some way can act like anonymous functions and receive parameters from previous operations \cite{Fitzgerald2007}. See program \ref{prog:ruby-sync} for a simple demonstration of how blocks can be used to create a basic networking server.
 
-Fibers
+\begin{program}  \caption{This program demonstrates how blocks can be used with the \texttt{TCPServer} library (included in \textit{Ruby's} standard library) to create a new thread for every incoming network client. The block (line 4 to 8) acts as a container applied to the result of previous operations, similar to a closure in \textit{JavaScript}; the \texttt{client} variable is the result of the \texttt{new} method of the \texttt{Thread} class, which accepts a \texttt{TCPSocket} object. Code source: \cite {Gupta2010}}  \label{prog:ruby-sync}  \begin{JavaCode}require 'socket'
+server = TCPServer.new(2202)
+while true
+    Thread new(server.accept){ |client|
+        msg = client.readline
+        client.write "You said: #{msg}"
+        client.close
+    }
+end  \end{JavaCode}\end{program}
+
+To create a non-blocking networking server in \textit{Ruby}, more complex operations are needed. This includes creating and managing an event-loop\footnote{Strictly speaking, since no events are involved this is called a \textit{reactor loop} \cite{Gupta2010}.} from scratch and using the \texttt{IO} class and the \texttt{accept\_nonblock} method of the \texttt{TCPSocket} class to create logical concurrency on one thread. Operations like handling connections and reading input from the sockets also have to be managed by the developer \cite{Gupta2010}.
+
+\begin{program}  \caption{A simple echo server, i.e. a server that responds in a simple way depending on what the request contains. A \textit{Ruby} module (line 5) contains the necessary logic and is managed by the \textit{EventMachine} system. Line 10 initialises the reactor loop and line 11 starts the server using the predefined module.}  \label{prog:ruby-em}  \begin{JavaCode}
+require 'rubygems'
+require 'eventmachine'
+
+module EchoServer
+    def receive_data data
+        send_data "You said: #{data}"
+    end
+end
+
+EventMachine::run {
+    EventMachine::start_server "127.0.0.1", 2202, EchoServer
+}  \end{JavaCode}\end{program}
+
+\textit{EventMachine} provides a simple way to abstract the process of managing event-based concurrency with \textit{Ruby}. It includes its own event-loop -- or \textit{reactor} -- which creates and handles events across the application. To interact with the environment the reactor provides asynchronous interfaces -- called \textit{Connections}, which have to be defined within the reactor loop. \textit{EventMachine} includes several ways of creating connections:
+
+\begin{itemize}
+  \item Creating a subclass of the \texttt{Connection} class and overriding its methods, then passing the class reference to the \textit{connect} method of \textit{EventMachine}
+  \item Creating a module with the appropriate methods for handling connections (see program \ref{prog:ruby-em})
+  \item Using a block (see program \ref{prog:ruby-sync}) and overriding methods of the connection object passed as parameter
+\end{itemize}
+Program \ref{prog:ruby-em} demonstrates, how the simple TCP server from program \ref{prog:ruby-sync} can be implemented using the \textit{EventMachine} reactor. Besides this comprehensible TCP communication functionality, \textit{EventMachine} also includes functionality for deferring or postponing program logic. Deferring is important when interacting with code that would normally block the event-loop (see program \ref{prog:ruby-defer}). The \texttt{Timer} class or the \texttt{add\_timer} and \texttt{add\_periodic\_timer} methods can be used to execute program logic at an arbitrary point in time (e.g. for scheduled or recurring tasks).
+
+\begin{program}  \caption{An example of using \textit{EventMachine} to archieve \textit{JavaScript}-like callback functionality in \textit{Ruby}. A long-running operation can be put in a block, the execution of which is managed by \textit{EventMachine} via its threadpool. After the execution has completed, the result is passed to another block (i.e. the ``callback'') as a parameter.}  \label{prog:ruby-defer}  \begin{JavaCode}
+operation = proc {
+    # long-running operation, e.g. database query
+}
+callback = proc { |result|
+    # do something with result
+}
+
+EventMachine.defer(operation, callback)  \end{JavaCode}\end{program}
+
+\subsubsection*{Scalability and Performance}
 
 
 \subsection{Others}
@@ -150,6 +197,7 @@ React, Derby, Twisted, Java NIO
 \section{Actor-based technologies}
 
 \subsection{Play!} \newpage a \newpage a \newpage a \newpage a \newpage a
+
 The Scala Actor Model
 
 
