Added play development

--- a/20_technical.tex
+++ b/20_technical.tex
@@ -147,7 +147,7 @@ Illustration of a simple call stack structure. As time progresses (horizontal ax
 
 Despite its advantages, heavy use of the stack in the context of modern Web applications poses two substantial problems: On the one hand, the concept of the stack origins from a time where concurrent computing was not frequently used -- especially in the manner seen in highly concurrent applications. The behaviour of the stack pursues a strongly linear manner of execution. Because at any point in time, only one call can be pushed onto the stack at once, only one action can happen at a time. Likewise, if an operation were to take an extended or unspecified period of time -- like accessing a remote Web service -- a single call stack provides no way of executing another operation during this time. The second problem of the call stack is that it can not be distributed across physically or logically separated systems. Pushing a call onto the stack implies that a return memory address -- i.e. a continuation point -- is known and clearly specified, which is not the case for distributed systems \cite{Hohpe2006}. 
 
-The departure from the stack also implies a concept called \textit{loose coupling}. This means, that the components of interaction within a program do not need to know the exact specifications of the target. One example would be a new user registering for the service: A tightly coupled system would need to call the exact function that creates the user in the database. In an event-based system an ``user created'' event would be created and the database component would receive this event. This leads to a more flexible and resilient application structure, because changes to the exact implementation of one component do not require changes on the other side. The act of developing an application without a call stack is known as \textit{stack ripping} \cite{Drolia2010}.
+The departure from the stack also implies a concept called \textit{loose coupling}. This means, that the components of interaction within a program do not need to know the exact specifications of the target. One example would be a new user registering for the service: A tightly coupled system would need to call the exact function that creates the user in the database. In an event-based system an event called \textit{userCreated} (or similar) would be created and the database component would receive this event. This leads to a more flexible and resilient application structure, because changes to the exact implementation of one component do not require changes on the other side. The act of developing an application without a call stack is known as \textit{stack ripping} \cite{Drolia2010}.
 
 \subsubsection*{Scalability}
 In contrast to the purely thread-based concept presented in section \ref{sec:threads}, event-based architectures tend to be better scalable. One major reason for this is the blocking behaviour of the I/O thread; while in purely thread-based systems the thread accepting an incoming request is no longer available for processing until all blocking operations have finished, the I/O thread in event-based systems only processes short-lived operations. Thus, in the latter, scalability is not directly proportional to the number of threads used by the system \cite[p. 2]{Carrera}. A typical example of this behaviour is shown in figure \ref{fig:events_scale}. In this example, an event-based server can achieve a roughly 1000 times higher throughput per thread, than that of a purely thread-based one.
