--- a/20_technical.tex
+++ b/20_technical.tex
@@ -1,4 +1,5 @@
 \chapter{Technical Background}
+\label{lab:technical}
 
 \section{Terms and Definitions}
 \label{sec:terms}
@@ -220,7 +221,7 @@ Furthermore, due to the fact that every stage has its own thread pool, context s
 In an actor-based architecture, \textit{actors} are the universal primitive of concurrent processing. An actor is an isolated (i.e. self-contained) entity that executes program logic. Actors can communicate with each other via asynchronous messages that contain arbitrary data and a reference to the sender. Based on the nature of the received message, the actor can execute side-effect-logic like writing a file to disk, but can also send messages to other actors -- including the original sender. Actor-based architectures are similar to event-based architectures in the sense that both implement communication via message-passing. The concept of a direct response like in all aforementioned architectural patterns -- be it via a call stack or a callback handler -- becomes irrelevant \cite{Haller2006}. 
 
 \subsubsection*{Flow of Control}
-Event-based architectures work by the principle of \textit{inversion of control} (see section \ref{lab:events}), which is a necessity given the mechanisms of events. However, this limits the clearly defined structure of the program code and tends to be less idiomatic in nature. Message passing between actors, on the other hand, does not rely on inversion of control \cite{Haller2006}. Control remains solely with the sending actor, since he can decide, to whom -- if at all -- to send further messages. This aids in reduced complexity when designing concurrent programs. Seen in this perspective, actor-based architectures can be seen as a balanced compromise between thread- and event-based architectures.
+Event-based architectures work by the principle of \textit{inversion of control} (see section \ref{lab:events}), which is a necessity given the mechanisms of events. However, this limits the clearly defined structure of the program code and tends to be less idiomatic in nature. Message passing between actors, on the other hand, does not rely on inversion of control \cite{Haller2006}. Control remains solely with the sending actor, since he can decide, to whom -- if at all -- to send further messages (see figure \ref{fig:actor_flow} for a functional diagram). This aids in reduced complexity when designing concurrent programs. Seen in this perspective, actor-based architectures can be seen as a balanced compromise between thread- and event-based architectures.
 
 Another aspect of actor-based program flow is that the loose coupling introduced by events is further extended. Instead of memorising references to the callee function, actors have the choice of sending a message back; this introduces symmetry to logical communication. Furthermore, an actor's internal state can only change in response to incoming messages \cite[p. 38]{Haller2011}. This simple fact has great implications on state management across the application; this architectural characteristic is known as \textit{share-nothing} architecture \cite[p. 3]{Bonetta}.
 
@@ -234,7 +235,15 @@ Illustration of an actor-based flow of control. Actors are represented as circle
 \label{fig:actor_flow}
 \end{figure}
 
-Incoming messages are handled via \textit{mailboxes}, which are basically actor-specific queues that receive, filter and defer incoming messages. Like in event-based architectures, there is no guarantee in which order messages arrive in the mailbox and -- since the actor model does not specify a medium for passing messages (see section \textit{Scalability}), a message can take arbitrarily long to reach its destination \cite[97]{Erb2012}. Since only the corresponding actor can access his mailbox and only one message is processed at a time, no concurrency issues (like race conditions) can arise for the actor state and the mailbox as well as in between messages \cite[p. 12]{Eriksson2013}.
+Incoming messages are handled via \textit{mailboxes}, which are basically actor-specific queues that receive, filter and defer incoming messages. Like in event-based architectures, there is no guarantee in which order messages arrive in the mailbox and -- since the actor model does not specify a medium for passing messages (see section \textit{Scalability}), a message can take arbitrarily long to reach its destination \cite[97]{Erb2012}. Since only the corresponding actor can access his mailbox and only one message is processed at a time, no concurrency issues (like race conditions) can arise for the actor state and the mailbox as well as in between messages \cite[p. 12]{Eriksson2013}. The orchestration of message processing is done by a \textit{dispatcher}, i.e. a part of framework logic that handles the execution of asynchronous, actor-based logic \cite[p. 97]{Gupta2012}. See figure \ref{fig:gil} for a basic illustration of resource mapping within an actor system.
+
+\begin{figure}
+\centering\small
+\setlength{\tabcolsep}{0mm}
+  \includegraphics[width=.90\textwidth]{actors}
+\caption{This graphic illustrates how resources are handled in a typical actor system. A \textit{dispatcher} distributes messages of actors to operating system threads based on certain strategies (e.g. load balancing). Image source: \cite{Gupta2012}}
+\label{fig:gil}
+\end{figure}
 
 Actors are also \textit{resilient}, i.e. robust in the case of failure. \textit{Erlang}, one of the programming languages first to embrace the actor model, coined the term \textit{let-it-crash}; due to the isolated nature of actors, one actor unable to proceed working (i.e. \textit{crashing}) will not affect other actors. The actor model also provides hierarchical structures of actors, which enable supervising actors to restart crashed actors \cite{Armstrong2007}.
 
